# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "requery"
version = "0.5.0"
authors = ["Tiwater Team <hi@tiwater.com>"]
edition = "2021"
description = "A Rust-powered Python package for querying rerun data."
readme = "README.md"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "test"
path = "test/query.rs"

[dependencies]
re_data_store = "0.17.0"
re_entity_db = "0.18.0"
re_log_types = "0.18.0"
re_log_encoding = "0.18.0"
re_query = "0.18.0"
re_types = "0.18.0"
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
re_arrow2 = "0.17.4"
log = "0.4.22"
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
env_logger = "0.11.5"
re_chunk = "0.18.0"

[package.metadata.maturin]
name = "requery" # This is the name that will be used on PyPI.
