[package]
name = "rerun_query"
version = "0.6.3"
authors = ["Tiwater Team <hi@tiwater.com>"]
edition = "2021"
description = "A Rust-powered Python package for querying rerun data."
readme = "README.md"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "test"
path = "test/query.rs"

[dependencies]
re_data_store = "0.17.0"
re_entity_db = "0.18.0"
re_log_types = "0.18.0"
re_log_encoding = "0.18.0"
re_query = "0.18.0"
re_types = "0.18.0"
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
re_arrow2 = "0.17.4"
log = "0.4.22"
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
env_logger = "0.11.5"
re_chunk = "0.18.0"
