[project]
name = "rerun_query"
version = "0.6.7"
description = "A Rust-powered Python package for querying rerun data."
authors = [{ name = "Tiwater Team", email = "hi@tiwater.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

classifiers = [
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Framework :: Robot Framework :: Library",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: File Formats",
  "Topic :: Software Development :: Libraries :: Python Modules",
] # Classifiers help users find your project by categorizing it

# Optional: If you want to specify where to find the source code
urls = { "GitHub" = "https://github.com/tiwater/rerun-query" }

# Optional: Define additional dependencies for your package
dependencies = ["numpy>=1.21", "python-semantic-release>=9.0"]

[project.optional-dependencies]
dev = ["pre-commit>=2.20,<3.0"]

[build-system]
requires = ["maturin>=0.14.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "requery"
features = ["pyo3/extension-module"]

[tool.semantic_release]
version_variable = ["Cargo.toml:version", "pyproject.toml:version"]
upload_to_pypi = false
